--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -38,7 +38,7 @@ http {
 
     server {
         listen       80 default_server;
-        server_name  localhost, centos-node2.random.com;
+        server_name  localhost, {{ server_name }};
         root         /usr/share/nginx/html;
 
         # Load configuration files for the default server block.
@@ -46,6 +46,14 @@ http {
 
         location / {
         }
+
+        {% if php_enabled %}
+        location ~ \.php$ {
+            fastcgi_pass unix:/var/run/php-fpm.sock;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+         }
+        {% endif %}
 
         error_page 404 /404.html;
             location = /40x.html {
@@ -55,36 +63,6 @@ http {
             location = /50x.html {
         }
     }
-
-# Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2 default_server;
-#        listen       [::]:443 ssl http2 default_server;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers HIGH:!aNULL:!MD5;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        location / {
-#        }
-#
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
-#
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-#    }
 
 }
 
