Added wordpress and corrected ngings.conf

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -40,6 +40,7 @@ http {
         listen       80 default_server;
         server_name  localhost, {{ server_name }};
         root         /usr/share/nginx/html;
+        index        index.php index.html
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
